syntax = "proto3";

package investlens.moex.grpc;

option csharp_namespace = "InvestLens.Grpc.Service";

import "google/protobuf/wrappers.proto";

message GetPaginationRequest {
    int32 page = 1;
    int32 pageSize = 2;
    google.protobuf.StringValue sort = 3;
    google.protobuf.StringValue filter = 4;
}